<resources>
    <string name="app_full_name">Bách Khoa Open Day</string>
    <string name="app_name">BKOD</string>
    <string name="map_api_key">AIzaSyAMwKxf-SAYBzYj9YHHz-a3DsjWLF4l7Xg</string>
    <!--<string name="map_api_key">AIzaSyCMJMzfNgEN7nB6Ndmd4d0uZjGfb5x7hew</string>-->
    <string name="user_id">User Id</string>
    <string name="tour_id">Tour Id</string>
    <string name="tour_name">Tên của tour</string>
    <string name="tour_state">Trạng thái tour</string>
    <string name="tour_state_active">Đang diễn ra</string>
    <string name="tour_state_inactive">Đã diễn ra</string>
    <string name="tour_state_waiting">Chưa diễn ra</string>
    <string name="tour_date">Ngày diễn ra tour</string>
    <string name="tour_member_list">Danh sách thành viên</string>
    <string name="tour_timesheet_list">Danh sách chặng</string>
    <string name="email">Email</string>
    <string name="input_message">Nhập tin nhắn</string>
    <string name="send_message">Gửi tin nhắn</string>
    <string name="password">Mật khẩu</string>
    <string name="prompt_retype_password">Nhập lại mật khẩu</string>
    <string name="fullname">Họ tên đầy đủ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="gender_other">Giới tính khác</string>
    <string name="gender_undisclosed">Không tiết lộ</string>
    <string name="school">Trường</string>
    <string name="classroom">Lớp</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="prompt_class">Nhập lại mật khẩu</string>
    <string name="action_free_sign_up">Đăng Ký Tự Do</string>
    <string name="action_hust_sign_up">Đăng Ký Với Nhà Trường</string>
    <string name="title_sign_up">Đăng ký</string>
    <string name="sign_up_hint">Bạn Chưa Có Tài Khoản</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="sign_in_hint">Đăng Nhập Tài Khoản Tại Đây</string>
    <string name="action_sign_out">Đăng xuất</string>
    <string name="ask_sign_out">Bạn có muốn đăng xuất không?</string>
    <string name="error_invalid_email">Email không hợp lệ</string>
    <string name="error_invalid_password">Mật khẩu không hợp lệ</string>
    <string name="error_password_not_match">Mật khẩu không hợp khớp</string>
    <string name="error_invalid_fullname">Họ tên không hợp lệ</string>
    <string name="error_invalid_birthday">Ngày sinh không hợp lệ</string>
    <string name="server_waiting_connection">Đợi kết nối đến server!</string>
    <string name="error_server_lost_connection">Mất kết nối đến server!</string>
    <string name="error_server_message">Lỗi giao tiếp với server!</string>
    <string name="error_unknown">Lỗi không xác định</string>
    <string name="error_valid_email_password">Email hoặc mật khẩu không đúng</string>
    <string name="error_conflict_account">Tài khoản hiện đang được đăng nhập bởi một người khác</string>
    <string name="error_email_exist">Email đã được sử dụng</string>
    <string name="error_database">Lỗi cơ sở dữ liệu</string>
    <string name="info_title">Tin tức</string>
    <string name="conversations_title">Danh sách hội thoại</string>
    <string name="setting_title">Cài đặt</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Danh sách tour</string>
    <string name="tour_function">Vai trò trong tour</string>
    <string name="tour_function_member">Thành viên</string>
    <string name="tour_function_leader">Trưởng đoàn</string>
    <string name="tour_function_vice_leader">Phó đoàn</string>
    <string name="tour_function_parent">Phụ huynh</string>
    <string name="menu_user_info">Thông tin cá nhân</string>
    <string name="tour_info">Thông tin tour</string>
    <string name="tour_map">Bản đồ tour</string>
    <string name="tour_map_image">Hình ảnh minh hoạ tour</string>
    <string name="contact_title">Liên hệ</string>
    <string name="alert_title">Thông báo</string>
    <string name="enable_gps">Bật GPS?</string>
    <string name="cancel_button">Huỷ</string>
    <string name="ok_button">Ok</string>
    <string name="check_gps_permission">Kiểm tra quyền truy cập GPS</string>
    <string name="disabled_gps">Chưa bật GPS</string>
    <string name="timesheet_info">Thông tin chặng</string>
    <string name="timesheet_time">Thời gian</string>
    <string name="timesheet_building_name">Tên toà nhà</string>
    <string name="timesheet_classroom_name">Tên phòng học</string>
    <string name="timesheet_classroom_floor">Tầng</string>
    <string name="timesheet_building_note">Ghi chú</string>
    <string name="manager_name">Tên người quản lý</string>
    <string name="copyright">Bản quyền thuộc về Lê Mạnh Hùng - Hactieuho96@gmail.com</string>
    <string name="ar">AR</string>
</resources>
