<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".SignUpActivity"
        android:background="@color/colorHomeBackground">
        <!-- Thong bao dang dang ky -->
        <ProgressBar
            android:id="@+id/sign_up_progress"
            android:layout_width="@dimen/progress_circle_size"
            android:layout_height="@dimen/progress_circle_size"
            android:layout_centerInParent="true"
            android:visibility="visible"
            android:indeterminateTint="@color/colorMain" />

        <!-- Giao dien dang ky -->
        <LinearLayout
            android:id="@+id/sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <include
                layout="@layout/full_custom_action_bar_layout"
                android:id="@+id/action_bar" >
            </include>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:layout_margin="10dp">
                <!-- Dang ky email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/sign_up_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Dang ky mat khau -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sign_up_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Dang ky xac nhan mat khau -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sign_up_retype_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:hint="@string/prompt_retype_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Dang ky ten day du -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sign_up_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text=""
                        android:hint="@string/fullname"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Dang ky ngay sinh -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sign_up_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:hint="@string/birthday"
                        android:textSize="18dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="date"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">
                    <TableRow android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="18dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="10dp"/>
                        <!-- Chon gioi tinh -->
                        <Spinner
                            android:id="@+id/sign_up_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:background="@android:drawable/btn_dropdown"
                            android:spinnerMode="dropdown"
                            android:padding="0dp"/>
                    </TableRow>
                </TableLayout>

                <!-- Dang ky truong -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sign_up_school"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:hint="@string/school"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Dang ky lop -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sign_up_classroom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionGo"
                        android:hint="@string/classroom"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signup_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_sign_up"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>