<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Thong bao dang lay thong tin nguoi dung -->
        <ProgressBar
            android:id="@+id/user_info_progress"
            android:layout_width="@dimen/progress_circle_size"
            android:layout_height="@dimen/progress_circle_size"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorMain"
            android:visibility="visible"/>
        <!-- Giao dien thong tin nguoi dung -->
        <RelativeLayout
            android:id="@+id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">
            <include
                layout="@layout/full_custom_action_bar_layout"
                android:id="@+id/action_bar" >
            </include>
            <!-- Giao dien thong tin nguoi dung -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/user_info"
                android:layout_below="@id/action_bar"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <!-- Email -->
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_email"
                        android:text="@string/email"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark">
                    </View>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_email_data"
                        android:text="a@a.a"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimaryDark">
                </View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <!-- Ten day du -->
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_fullname"
                        android:text="@string/fullname"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark">
                    </View>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_fullname_data"
                        android:text="Nguyễn Tử Quảng"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimaryDark">
                </View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <!-- Gioi tinh -->
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_gender"
                        android:text="@string/gender"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark">
                    </View>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_gender_data"
                        android:text="@string/gender_male"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimaryDark">
                </View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <!-- Truong hoc -->
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_school"
                        android:text="@string/school"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark">
                    </View>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_school_data"
                        android:text="Trường THPT Hai Bà Trưng"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimaryDark">
                </View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <!-- Lop hoc -->
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_classroom"
                        android:text="@string/classroom"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark">
                    </View>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_classroom_data"
                        android:text="12A1"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimaryDark">
                </View>
                <!-- So dien thoai -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_phone_number"
                        android:text="@string/phone_number"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark">
                    </View>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_phone_number_data"
                        android:text="0346885894"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/bottom">
                </View>
            </LinearLayout>
            <!-- Nut dang xuat -->
            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_info"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/rounded_button"
                android:paddingHorizontal="20dp"
                android:text="@string/action_sign_out"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>
    </RelativeLayout>
</layout>